Fix the SonarQube findings
Real fixes: promotion choices are now buttons, so a pawn can be
promoted from the keyboard; the theme picker closes on Escape; the
draw-accept button had 3.5:1 contrast, under the AA minimum; a
superseded .logout-btn block was leaking an underline onto the button.

The rest is cleanup — dead code and imports, a duplicate test, string
constants, and nested ternaries pulled out into named helpers.